--- a/index.html
+++ b/index.html
@@ -217,10 +217,10 @@
         </header>
 
         <div class="nav">
-            <a href="#categories" class="nav-btn">恋愛作品</a>
-            <a href="#categories" class="nav-btn">癒し系</a>
-            <a href="#categories" class="nav-btn">漫画・小説</a>
-            <a href="#categories" class="nav-btn">心温まる</a>
+            <a href="#romance-section" class="nav-btn">少女・女性マンガ</a>
+            <a href="#tl-section" class="nav-btn">TL</a>
+            <a href="#bl-section" class="nav-btn">BL</a>
+            <a href="#novel-section" class="nav-btn">文芸・ラノベ</a>
         </div>
 
         <div class="hero">
@@ -229,7 +229,7 @@
                 パートナーがいても、いなくても<br>
                 心が満たされない夜は誰にでもある<br>
                 <br>
-                恋愛ドラマ、癒し系アニメ、心温まる漫画で<br>
+                恋愛漫画、癒し系小説、心温まる物語で<br>
                 今夜を少しだけ優しく満たしませんか
             </p>
             <a href="#categories" 
@@ -239,77 +239,149 @@
             </a>
         </div>
 
-        <div class="categories" id="categories">
-            <div class="category-card">
-                <div class="category-icon">💕</div>
-                <h3>恋愛ドラマ・映画</h3>
-                <p>胸キュン必至<br>心がほどける恋愛作品</p>
-                <a href="https://al.dmm.com/?lurl=https%3A%2F%2Fwww.dmm.com%2Fdigital%2Fvideoa%2F-%2Flist%2F%3D%2Farticle%3Dkeyword%2Fid%3D555%2Fsort%3Ddate%2F&af_id=yoru365-990&ch=link_tool&ch_id=link" 
-                   target="_blank" 
-                   rel="noopener noreferrer" 
-                   class="category-link">
-                    今夜の恋を探す
-                </a>
+        <!-- カテゴリリンク一覧（テキスト） -->
+        <div style="background: white; padding: 40px; border-radius: 15px; margin: 30px 0; box-shadow: 0 10px 30px rgba(0,0,0,0.1);">
+            <h2 style="color: #d4758f; text-align: center; margin-bottom: 30px;">📚 ジャンルから探す</h2>
+            
+            <!-- 恋愛・大人向け漫画 -->
+            <div style="margin-bottom: 30px;">
+                <h3 style="color: #d4758f; font-size: 1.3em; margin-bottom: 15px; padding-bottom: 10px; border-bottom: 2px solid #f0e6e9;">💕 恋愛・大人向け漫画</h3>
+                <div style="display: flex; flex-wrap: wrap; gap: 15px;">
+                    <a href="https://al.dmm.com/?lurl=https%3A%2F%2Fbook.dmm.com%2F&af_id=yoru365-990&ch=link_tool&ch_id=link" target="_blank" rel="noopener noreferrer" style="color: #666; text-decoration: none; padding: 8px 15px; background: #fef5f7; border-radius: 20px; transition: all 0.3s;">恋愛 (12,169)</a>
+                    <a href="https://al.dmm.com/?lurl=https%3A%2F%2Fbook.dmm.com%2F&af_id=yoru365-990&ch=link_tool&ch_id=link" target="_blank" rel="noopener noreferrer" style="color: #666; text-decoration: none; padding: 8px 15px; background: #fef5f7; border-radius: 20px; transition: all 0.3s;">ラブコメ (1,571)</a>
+                    <a href="https://al.dmm.com/?lurl=https%3A%2F%2Fbook.dmm.com%2F&af_id=yoru365-990&ch=link_tool&ch_id=link" target="_blank" rel="noopener noreferrer" style="color: #666; text-decoration: none; padding: 8px 15px; background: #fef5f7; border-radius: 20px; transition: all 0.3s;">ロマンス (600)</a>
+                    <a href="https://al.dmm.com/?lurl=https%3A%2F%2Fbook.dmm.com%2F&af_id=yoru365-990&ch=link_tool&ch_id=link" target="_blank" rel="noopener noreferrer" style="color: #666; text-decoration: none; padding: 8px 15px; background: #fef5f7; border-radius: 20px; transition: all 0.3s;">お色気 (367)</a>
+                    <a href="https://al.dmm.com/?lurl=https%3A%2F%2Fbook.dmm.com%2F&af_id=yoru365-990&ch=link_tool&ch_id=link" target="_blank" rel="noopener noreferrer" style="color: #666; text-decoration: none; padding: 8px 15px; background: #fef5f7; border-radius: 20px; transition: all 0.3s;">セクシー (193)</a>
+                    <a href="https://al.dmm.com/?lurl=https%3A%2F%2Fbook.dmm.com%2F&af_id=yoru365-990&ch=link_tool&ch_id=link" target="_blank" rel="noopener noreferrer" style="color: #666; text-decoration: none; padding: 8px 15px; background: #fef5f7; border-radius: 20px; transition: all 0.3s;">不倫・婚外恋愛 (144)</a>
+                    <a href="https://al.dmm.com/?lurl=https%3A%2F%2Fbook.dmm.com%2F&af_id=yoru365-990&ch=link_tool&ch_id=link" target="_blank" rel="noopener noreferrer" style="color: #666; text-decoration: none; padding: 8px 15px; background: #fef5f7; border-radius: 20px; transition: all 0.3s;">オフィスラブ (42)</a>
+                    <a href="https://al.dmm.com/?lurl=https%3A%2F%2Fbook.dmm.com%2F&af_id=yoru365-990&ch=link_tool&ch_id=link" target="_blank" rel="noopener noreferrer" style="color: #666; text-decoration: none; padding: 8px 15px; background: #fef5f7; border-radius: 20px; transition: all 0.3s;">ガールズラブ (42)</a>
+                    <a href="https://al.dmm.com/?lurl=https%3A%2F%2Fbook.dmm.com%2F&af_id=yoru365-990&ch=link_tool&ch_id=link" target="_blank" rel="noopener noreferrer" style="color: #666; text-decoration: none; padding: 8px 15px; background: #fef5f7; border-radius: 20px; transition: all 0.3s;">ロマンスコミック</a>
+                    <a href="https://al.dmm.com/?lurl=https%3A%2F%2Fbook.dmm.com%2F&af_id=yoru365-990&ch=link_tool&ch_id=link" target="_blank" rel="noopener noreferrer" style="color: #666; text-decoration: none; padding: 8px 15px; background: #fef5f7; border-radius: 20px; transition: all 0.3s;">大人向け漫画</a>
+                </div>
             </div>
 
-            <div class="category-card">
-                <div class="category-icon">🌸</div>
-                <h3>癒し系アニメ</h3>
-                <p>優しい世界に<br>心が温まる</p>
-                <a href="https://al.dmm.com/?lurl=https%3A%2F%2Fwww.dmm.com%2Fdigital%2Fvideoa%2F-%2Flist%2F%3D%2Farticle%3Dkeyword%2Fid%3D46%2Fsort%3Ddate%2F&af_id=yoru365-990&ch=link_tool&ch_id=link" 
-                   target="_blank" 
-                   rel="noopener noreferrer" 
-                   class="category-link">
-                    癒されたい
-                </a>
+            <!-- BL・TL -->
+            <div style="margin-bottom: 30px;">
+                <h3 style="color: #d4758f; font-size: 1.3em; margin-bottom: 15px; padding-bottom: 10px; border-bottom: 2px solid #f0e6e9;">💙 BL・TL</h3>
+                <div style="display: flex; flex-wrap: wrap; gap: 15px;">
+                    <a href="https://al.dmm.com/?lurl=https%3A%2F%2Fbook.dmm.com%2F&af_id=yoru365-990&ch=link_tool&ch_id=link" target="_blank" rel="noopener noreferrer" style="color: #666; text-decoration: none; padding: 8px 15px; background: #e6f2ff; border-radius: 20px; transition: all 0.3s;">BL（ボーイズラブ）</a>
+                    <a href="https://al.dmm.com/?lurl=https%3A%2F%2Fbook.dmm.com%2F&af_id=yoru365-990&ch=link_tool&ch_id=link" target="_blank" rel="noopener noreferrer" style="color: #666; text-decoration: none; padding: 8px 15px; background: #ffe6f2; border-radius: 20px; transition: all 0.3s;">TL（ティーンズラブ）</a>
+                </div>
             </div>
 
-            <div class="category-card">
-                <div class="category-icon">📖</div>
-                <h3>恋愛漫画・小説</h3>
-                <p>切ない恋から<br>ハッピーエンドまで</p>
-                <a href="https://al.dmm.com/?lurl=https%3A%2F%2Fbook.dmm.com%2F&af_id=yoru365-990&ch=link_tool&ch_id=link" 
-                   target="_blank" 
-                   rel="noopener noreferrer" 
-                   class="category-link">
-                    読んで満たされる
-                </a>
+            <!-- 小説 -->
+            <div style="margin-bottom: 30px;">
+                <h3 style="color: #d4758f; font-size: 1.3em; margin-bottom: 15px; padding-bottom: 10px; border-bottom: 2px solid #f0e6e9;">📖 恋愛・官能小説</h3>
+                <div style="display: flex; flex-wrap: wrap; gap: 15px;">
+                    <a href="https://al.dmm.com/?lurl=https%3A%2F%2Fbook.dmm.com%2F&af_id=yoru365-990&ch=link_tool&ch_id=link" target="_blank" rel="noopener noreferrer" style="color: #666; text-decoration: none; padding: 8px 15px; background: #fff5e6; border-radius: 20px; transition: all 0.3s;">ロマンス小説</a>
+                    <a href="https://al.dmm.com/?lurl=https%3A%2F%2Fbook.dmm.com%2F&af_id=yoru365-990&ch=link_tool&ch_id=link" target="_blank" rel="noopener noreferrer" style="color: #666; text-decoration: none; padding: 8px 15px; background: #fff5e6; border-radius: 20px; transition: all 0.3s;">官能小説</a>
+                    <a href="https://al.dmm.com/?lurl=https%3A%2F%2Fbook.dmm.com%2F&af_id=yoru365-990&ch=link_tool&ch_id=link" target="_blank" rel="noopener noreferrer" style="color: #666; text-decoration: none; padding: 8px 15px; background: #fff5e6; border-radius: 20px; transition: all 0.3s;">文芸・ラノベ</a>
+                </div>
             </div>
 
-            <div class="category-card">
-                <div class="category-icon">✨</div>
-                <h3>心温まる作品</h3>
-                <p>涙活にも<br>日常系にも</p>
-                <a href="https://al.dmm.com/?lurl=https%3A%2F%2Ftv.dmm.com%2F&af_id=yoru365-990&ch=link_tool&ch_id=link" 
-                   target="_blank" 
-                   rel="noopener noreferrer" 
-                   class="category-link">
-                    優しい時間を
-                </a>
+            <!-- 基本無料ゲーム -->
+            <div>
+                <h3 style="color: #d4758f; font-size: 1.3em; margin-bottom: 15px; padding-bottom: 10px; border-bottom: 2px solid #f0e6e9;">🎮 基本無料ゲーム</h3>
+                <div style="display: flex; flex-wrap: wrap; gap: 15px;">
+                    <a href="https://al.dmm.com/?lurl=https%3A%2F%2Fgames.dmm.com%2Flist%2Fpc%2Ftag&af_id=yoru365-990&ch=link_tool&ch_id=link" target="_blank" rel="noopener noreferrer" style="color: #666; text-decoration: none; padding: 8px 15px; background: #e6fff2; border-radius: 20px; transition: all 0.3s;">PCゲーム一覧</a>
+                    <a href="https://al.dmm.com/?lurl=https%3A%2F%2Fgames.dmm.com%2Flist%2Fpc%2Ftag&af_id=yoru365-990&ch=link_tool&ch_id=link" target="_blank" rel="noopener noreferrer" style="color: #666; text-decoration: none; padding: 8px 15px; background: #e6fff2; border-radius: 20px; transition: all 0.3s;">基本無料で遊ぶ</a>
+                </div>
             </div>
         </div>
 
-        <!-- 恋愛漫画ランキング -->
-        <div style="background: white; padding: 40px; border-radius: 15px; margin: 30px 0;">
-            <h2 style="color: #d4758f; text-align: center; margin-bottom: 30px;">💕 今週の恋愛漫画 TOP 5</h2>
+        <!-- 少女・女性マンガ -->
+        <div id="romance-section" style="background: white; padding: 40px; border-radius: 15px; margin: 30px 0;">
+            <h2 style="color: #d4758f; text-align: center; margin-bottom: 30px;">💕 少女・女性マンガ 人気TOP5</h2>
             <div id="romance-ranking" style="text-align: center; color: #666;">
                 <p>読み込み中...</p>
             </div>
         </div>
 
-        <!-- 人気小説ランキング -->
-        <div style="background: white; padding: 40px; border-radius: 15px; margin: 30px 0;">
-            <h2 style="color: #d4758f; text-align: center; margin-bottom: 30px;">📖 今週の人気小説 TOP 5</h2>
-            <div id="healing-ranking" style="text-align: center; color: #666;">
+        <!-- TL（ティーンズラブ） -->
+        <div id="tl-section" style="background: white; padding: 40px; border-radius: 15px; margin: 30px 0;">
+            <h2 style="color: #d4758f; text-align: center; margin-bottom: 30px;">💕 TL（ティーンズラブ） 人気TOP5</h2>
+            <div id="tl-ranking" style="text-align: center; color: #666;">
                 <p>読み込み中...</p>
             </div>
         </div>
 
-        <!-- おすすめ電子書籍 -->
-        <div style="background: white; padding: 40px; border-radius: 15px; margin: 30px 0;">
-            <h2 style="color: #d4758f; text-align: center; margin-bottom: 30px;">✨ 今週のおすすめ TOP 5</h2>
-            <div id="manga-ranking" style="text-align: center; color: #666;">
+        <!-- BL（ボーイズラブ） -->
+        <div id="bl-section" style="background: white; padding: 40px; border-radius: 15px; margin: 30px 0;">
+            <h2 style="color: #d4758f; text-align: center; margin-bottom: 30px;">💕 BL（ボーイズラブ） 人気TOP5</h2>
+            <div id="bl-ranking" style="text-align: center; color: #666;">
                 <p>読み込み中...</p>
+            </div>
+        </div>
+
+        <!-- 文芸・ラノベ -->
+        <div id="novel-section" style="background: white; padding: 40px; border-radius: 15px; margin: 30px 0;">
+            <h2 style="color: #d4758f; text-align: center; margin-bottom: 30px;">📖 文芸・ラノベ 人気TOP5</h2>
+            <div id="novel-ranking" style="text-align: center; color: #666;">
+                <p>読み込み中...</p>
+            </div>
+        </div>
+
+        <!-- DMM TVバナー -->
+        <div style="background: linear-gradient(135deg, #667eea 0%, #764ba2 100%); padding: 50px; border-radius: 15px; margin: 50px 0; text-align: center;">
+            <h2 style="color: white; font-size: 2em; margin-bottom: 20px;">📺 動画も見放題で楽しみたい方へ</h2>
+            <p style="color: white; font-size: 1.2em; margin-bottom: 30px;">
+                190,000本以上のアニメ・映画・ドラマが見放題<br>
+                DMM TVプレミアムで心も身体も満たす時間を
+            </p>
+            <a href="https://al.dmm.com/?lurl=https%3A%2F%2Ftv.dmm.com%2F&af_id=yoru365-990&ch=link_tool&ch_id=link" 
+               target="_blank" 
+               rel="noopener noreferrer"
+               style="display: inline-block; background: white; color: #667eea; padding: 20px 50px; border-radius: 50px; text-decoration: none; font-size: 1.3em; font-weight: bold; transition: all 0.3s; box-shadow: 0 10px 30px rgba(0,0,0,0.2);">
+                30日間無料体験
+            </a>
+        </div>
+
+        <!-- 全ジャンル一覧 -->
+        <div style="background: white; padding: 40px; border-radius: 15px; margin: 30px 0;">
+            <h2 style="color: #d4758f; text-align: center; margin-bottom: 40px;">📚 すべてのジャンルから探す</h2>
+            <div style="display: grid; grid-template-columns: repeat(auto-fit, minmax(200px, 1fr)); gap: 15px; max-width: 800px; margin: 0 auto;">
+                <a href="https://al.dmm.com/?lurl=https%3A%2F%2Fbook.dmm.com%2F&af_id=yoru365-990&ch=link_tool&ch_id=link" 
+                   target="_blank" rel="noopener noreferrer"
+                   style="padding: 20px; background: #f8f9fa; border-radius: 10px; text-decoration: none; color: #333; text-align: center; transition: all 0.3s; border: 2px solid #e9ecef;">
+                    <div style="font-size: 1.2em; margin-bottom: 5px;">📘</div>
+                    <div style="font-weight: bold;">少年・青年マンガ</div>
+                </a>
+                <a href="https://al.dmm.com/?lurl=https%3A%2F%2Fbook.dmm.com%2F&af_id=yoru365-990&ch=link_tool&ch_id=link" 
+                   target="_blank" rel="noopener noreferrer"
+                   style="padding: 20px; background: #f8f9fa; border-radius: 10px; text-decoration: none; color: #333; text-align: center; transition: all 0.3s; border: 2px solid #e9ecef;">
+                    <div style="font-size: 1.2em; margin-bottom: 5px;">💕</div>
+                    <div style="font-weight: bold;">少女・女性マンガ</div>
+                </a>
+                <a href="https://al.dmm.com/?lurl=https%3A%2F%2Fbook.dmm.com%2F&af_id=yoru365-990&ch=link_tool&ch_id=link" 
+                   target="_blank" rel="noopener noreferrer"
+                   style="padding: 20px; background: #f8f9fa; border-radius: 10px; text-decoration: none; color: #333; text-align: center; transition: all 0.3s; border: 2px solid #e9ecef;">
+                    <div style="font-size: 1.2em; margin-bottom: 5px;">💙</div>
+                    <div style="font-weight: bold;">BL</div>
+                </a>
+                <a href="https://al.dmm.com/?lurl=https%3A%2F%2Fbook.dmm.com%2F&af_id=yoru365-990&ch=link_tool&ch_id=link" 
+                   target="_blank" rel="noopener noreferrer"
+                   style="padding: 20px; background: #f8f9fa; border-radius: 10px; text-decoration: none; color: #333; text-align: center; transition: all 0.3s; border: 2px solid #e9ecef;">
+                    <div style="font-size: 1.2em; margin-bottom: 5px;">💖</div>
+                    <div style="font-weight: bold;">TL</div>
+                </a>
+                <a href="https://al.dmm.com/?lurl=https%3A%2F%2Fbook.dmm.com%2F&af_id=yoru365-990&ch=link_tool&ch_id=link" 
+                   target="_blank" rel="noopener noreferrer"
+                   style="padding: 20px; background: #f8f9fa; border-radius: 10px; text-decoration: none; color: #333; text-align: center; transition: all 0.3s; border: 2px solid #e9ecef;">
+                    <div style="font-size: 1.2em; margin-bottom: 5px;">📖</div>
+                    <div style="font-weight: bold;">文芸・ラノベ</div>
+                </a>
+                <a href="https://al.dmm.com/?lurl=https%3A%2F%2Fbook.dmm.com%2F&af_id=yoru365-990&ch=link_tool&ch_id=link" 
+                   target="_blank" rel="noopener noreferrer"
+                   style="padding: 20px; background: #f8f9fa; border-radius: 10px; text-decoration: none; color: #333; text-align: center; transition: all 0.3s; border: 2px solid #e9ecef;">
+                    <div style="font-size: 1.2em; margin-bottom: 5px;">💼</div>
+                    <div style="font-weight: bold;">ビジネス・実用</div>
+                </a>
+                <a href="https://al.dmm.com/?lurl=https%3A%2F%2Fbook.dmm.com%2F&af_id=yoru365-990&ch=link_tool&ch_id=link" 
+                   target="_blank" rel="noopener noreferrer"
+                   style="padding: 20px; background: #f8f9fa; border-radius: 10px; text-decoration: none; color: #333; text-align: center; transition: all 0.3s; border: 2px solid #e9ecef;">
+                    <div style="font-size: 1.2em; margin-bottom: 5px;">📸</div>
+                    <div style="font-weight: bold;">写真集</div>
+                </a>
             </div>
         </div>
 
@@ -341,10 +413,11 @@
 
         // 作品情報を取得して表示
         async function loadRankings() {
-            // 3つとも同じ電子書籍ランキングから取得（オフセットで別作品を表示）
-            await loadCategory('romance-ranking', null, '恋愛漫画');
-            await loadCategory('healing-ranking', null, '人気小説');
-            await loadCategory('manga-ranking', null, 'おすすめ電子書籍');
+            // 4つのジャンルランキングを読み込み
+            await loadCategory('romance-ranking', null, '少女・女性マンガ');
+            await loadCategory('tl-ranking', null, 'TL');
+            await loadCategory('bl-ranking', null, 'BL');
+            await loadCategory('novel-ranking', null, '文芸・ラノベ');
         }
 
         async function loadCategory(containerId, genreId, categoryName) {
