--- a/index.html
+++ b/index.html
@@ -100,17 +100,19 @@
         }
 
         .genre-item {
-            background: #2a2a2a;
+            background: transparent;
             padding: 20px;
             text-align: center;
             text-decoration: none;
             color: #fff;
+            border: 2px solid #00ffff;
             border-radius: 4px;
-            transition: background 0.3s;
+            transition: all 0.3s;
         }
 
         .genre-item:hover {
-            background: #3a3a3a;
+            background: rgba(0, 255, 255, 0.1);
+            box-shadow: 0 0 15px rgba(0, 255, 255, 0.5);
         }
 
         .category-section {
@@ -123,9 +125,8 @@
             text-align: center;
             margin-bottom: 30px;
             font-size: 1.8em;
-            color: #fff;
+            color: #00ffff;
             padding-bottom: 15px;
-            border-bottom: 2px solid #333;
         }
 
         .products-grid {
@@ -330,16 +331,16 @@
 
         <!-- DMM TVバナー -->
         <div class="banner">
-            <h2>動画も見放題で楽しみたい方へ</h2>
+            <h2>DMM TV で見放題を楽しむ</h2>
             <p>
                 19万本以上のアニメ・映画・ドラマが見放題<br>
-                DMM TVプレミアムで心も満たす時間を
+                DMM TVプレミアムで心も身体も満たす時間を
             </p>
-            <a href="https://al.dmm.com/?lurl=https%3A%2F%2Ftv.dmm.com%2F&af_id=yoru365-990&ch=link_tool&ch_id=link" 
+            <a href="https://al.dmm.com/?lurl=https%3A%2F%2Ftv.dmm.com%2Fvod%2F&af_id=yoru365-990&ch=link_tool&ch_id=link" 
                target="_blank" 
                rel="noopener noreferrer"
                class="banner-button">
-                30日間無料体験
+                DMM TV を楽しむ
             </a>
         </div>
 
