--- a/index.html
+++ b/index.html
@@ -101,13 +101,14 @@
 
         .genre-item {
             background: transparent;
-            padding: 20px;
+            padding: 15px 20px;
             text-align: center;
             text-decoration: none;
             color: #fff;
             border: 2px solid #00ffff;
             border-radius: 4px;
             transition: all 0.3s;
+            font-size: 0.9em;
         }
 
         .genre-item:hover {
@@ -122,11 +123,12 @@
         }
 
         .category-section h2 {
-            text-align: center;
-            margin-bottom: 30px;
-            font-size: 1.8em;
-            color: #00ffff;
-            padding-bottom: 15px;
+            text-align: left;
+            margin-bottom: 20px;
+            font-size: 1.5em;
+            font-weight: normal;
+            color: #fff;
+            padding-bottom: 10px;
         }
 
         .products-grid {
@@ -228,18 +230,6 @@
             <h1>孤独な夜のガイド</h1>
             <p class="subtitle">心がほどける恋愛・癒し系コンテンツ</p>
         </header>
-
-        <div class="hero">
-            <h2>満たされない夜に</h2>
-            <p>
-                パートナーがいても、いなくても<br>
-                心が満たされない夜は誰にでもある<br>
-                <br>
-                恋愛マンガ、BL、TL、癒し系小説で<br>
-                今夜を少しだけ優しく満たしませんか
-            </p>
-            <a href="#categories" class="cta-button">今夜のコンテンツを探す</a>
-        </div>
 
         <!-- ジャンル一覧 -->
         <div class="genre-links">
@@ -348,6 +338,9 @@
             <p>© 2025 孤独な夜のガイド</p>
             <p style="margin-top: 10px; font-size: 0.9em;">
                 あなたの夜に、少しの癒しと満たしを
+            </p>
+            <p style="margin-top: 15px; font-size: 0.8em;">
+                Powered by <a href="https://affiliate.dmm.com/api/" target="_blank" rel="noopener noreferrer" style="color: #999; text-decoration: none;">DMM.com Webサービス</a>
             </p>
         </footer>
     </div>
