--- a/index.html
+++ b/index.html
@@ -235,15 +235,15 @@
         <div class="genre-links">
             <h2>ジャンルから探す</h2>
             <div class="genre-grid">
-                <a href="https://al.dmm.com/?lurl=https%3A%2F%2Fbook.dmm.com%2F&af_id=yoru365-990&ch=link_tool&ch_id=link" class="genre-item" target="_blank" rel="noopener noreferrer">少女・女性マンガ</a>
-                <a href="https://al.dmm.com/?lurl=https%3A%2F%2Fbook.dmm.com%2F&af_id=yoru365-990&ch=link_tool&ch_id=link" class="genre-item" target="_blank" rel="noopener noreferrer">TL</a>
-                <a href="https://al.dmm.com/?lurl=https%3A%2F%2Fbook.dmm.com%2F&af_id=yoru365-990&ch=link_tool&ch_id=link" class="genre-item" target="_blank" rel="noopener noreferrer">BL</a>
-                <a href="https://al.dmm.com/?lurl=https%3A%2F%2Fbook.dmm.com%2F&af_id=yoru365-990&ch=link_tool&ch_id=link" class="genre-item" target="_blank" rel="noopener noreferrer">文芸・ラノベ</a>
-                <a href="https://al.dmm.com/?lurl=https%3A%2F%2Fbook.dmm.com%2F&af_id=yoru365-990&ch=link_tool&ch_id=link" class="genre-item" target="_blank" rel="noopener noreferrer">恋愛小説</a>
-                <a href="https://al.dmm.com/?lurl=https%3A%2F%2Fbook.dmm.com%2F&af_id=yoru365-990&ch=link_tool&ch_id=link" class="genre-item" target="_blank" rel="noopener noreferrer">ロマンス</a>
-                <a href="https://al.dmm.com/?lurl=https%3A%2F%2Fbook.dmm.com%2F&af_id=yoru365-990&ch=link_tool&ch_id=link" class="genre-item" target="_blank" rel="noopener noreferrer">アダルトマンガ</a>
-                <a href="https://al.dmm.com/?lurl=https%3A%2F%2Fbook.dmm.com%2F&af_id=yoru365-990&ch=link_tool&ch_id=link" class="genre-item" target="_blank" rel="noopener noreferrer">官能小説</a>
-                <a href="https://al.dmm.com/?lurl=https%3A%2F%2Fbook.dmm.com%2F&af_id=yoru365-990&ch=link_tool&ch_id=link" class="genre-item" target="_blank" rel="noopener noreferrer">写真集</a>
+                <a href="https://al.dmm.com/?lurl=https%3A%2F%2Fbook.dmm.com%2Fcomic%2Fgirl%2F&af_id=yoru365-990&ch=link_tool&ch_id=link" class="genre-item" target="_blank" rel="noopener noreferrer">少女・女性マンガ</a>
+                <a href="https://al.dmm.com/?lurl=https%3A%2F%2Fbook.dmm.com%2Fcomic%2Ftl%2F&af_id=yoru365-990&ch=link_tool&ch_id=link" class="genre-item" target="_blank" rel="noopener noreferrer">TL</a>
+                <a href="https://al.dmm.com/?lurl=https%3A%2F%2Fbook.dmm.com%2Fcomic%2Fbl%2F&af_id=yoru365-990&ch=link_tool&ch_id=link" class="genre-item" target="_blank" rel="noopener noreferrer">BL</a>
+                <a href="https://al.dmm.com/?lurl=https%3A%2F%2Fbook.dmm.com%2Fnovel%2F&af_id=yoru365-990&ch=link_tool&ch_id=link" class="genre-item" target="_blank" rel="noopener noreferrer">文芸・ラノベ</a>
+                <a href="https://al.dmm.com/?lurl=https%3A%2F%2Fbook.dmm.com%2Fnovel%2Fromance%2F&af_id=yoru365-990&ch=link_tool&ch_id=link" class="genre-item" target="_blank" rel="noopener noreferrer">恋愛小説</a>
+                <a href="https://al.dmm.com/?lurl=https%3A%2F%2Fbook.dmm.com%2Fnovel%2Fromance%2F&af_id=yoru365-990&ch=link_tool&ch_id=link" class="genre-item" target="_blank" rel="noopener noreferrer">ロマンス</a>
+                <a href="https://al.dmm.com/?lurl=https%3A%2F%2Fbook.dmm.com%2Fadult%2Fcomic%2F&af_id=yoru365-990&ch=link_tool&ch_id=link" class="genre-item" target="_blank" rel="noopener noreferrer">アダルトマンガ</a>
+                <a href="https://al.dmm.com/?lurl=https%3A%2F%2Fbook.dmm.com%2Fadult%2Fnovel%2F&af_id=yoru365-990&ch=link_tool&ch_id=link" class="genre-item" target="_blank" rel="noopener noreferrer">官能小説</a>
+                <a href="https://al.dmm.com/?lurl=https%3A%2F%2Fbook.dmm.com%2Fadult%2Fphoto%2F&af_id=yoru365-990&ch=link_tool&ch_id=link" class="genre-item" target="_blank" rel="noopener noreferrer">写真集</a>
             </div>
         </div>
 
