--- a/index.html
+++ b/index.html
@@ -231,19 +231,58 @@
             <p class="subtitle">心がほどける恋愛・癒し系コンテンツ</p>
         </header>
 
-        <!-- ジャンル一覧 -->
-        <div class="genre-links">
-            <h2>ジャンルから探す</h2>
-            <div class="genre-grid">
-                <a href="https://al.dmm.com/?lurl=https%3A%2F%2Fbook.dmm.com%2Fcomic%2Fgirl%2F&af_id=yoru365-990&ch=link_tool&ch_id=link" class="genre-item" target="_blank" rel="noopener noreferrer">少女・女性マンガ</a>
-                <a href="https://al.dmm.com/?lurl=https%3A%2F%2Fbook.dmm.com%2Fcomic%2Ftl%2F&af_id=yoru365-990&ch=link_tool&ch_id=link" class="genre-item" target="_blank" rel="noopener noreferrer">TL</a>
-                <a href="https://al.dmm.com/?lurl=https%3A%2F%2Fbook.dmm.com%2Fcomic%2Fbl%2F&af_id=yoru365-990&ch=link_tool&ch_id=link" class="genre-item" target="_blank" rel="noopener noreferrer">BL</a>
-                <a href="https://al.dmm.com/?lurl=https%3A%2F%2Fbook.dmm.com%2Fnovel%2F&af_id=yoru365-990&ch=link_tool&ch_id=link" class="genre-item" target="_blank" rel="noopener noreferrer">文芸・ラノベ</a>
-                <a href="https://al.dmm.com/?lurl=https%3A%2F%2Fbook.dmm.com%2Fnovel%2Fromance%2F&af_id=yoru365-990&ch=link_tool&ch_id=link" class="genre-item" target="_blank" rel="noopener noreferrer">恋愛小説</a>
-                <a href="https://al.dmm.com/?lurl=https%3A%2F%2Fbook.dmm.com%2Fnovel%2Fromance%2F&af_id=yoru365-990&ch=link_tool&ch_id=link" class="genre-item" target="_blank" rel="noopener noreferrer">ロマンス</a>
-                <a href="https://al.dmm.com/?lurl=https%3A%2F%2Fbook.dmm.com%2Fadult%2Fcomic%2F&af_id=yoru365-990&ch=link_tool&ch_id=link" class="genre-item" target="_blank" rel="noopener noreferrer">アダルトマンガ</a>
-                <a href="https://al.dmm.com/?lurl=https%3A%2F%2Fbook.dmm.com%2Fadult%2Fnovel%2F&af_id=yoru365-990&ch=link_tool&ch_id=link" class="genre-item" target="_blank" rel="noopener noreferrer">官能小説</a>
-                <a href="https://al.dmm.com/?lurl=https%3A%2F%2Fbook.dmm.com%2Fadult%2Fphoto%2F&af_id=yoru365-990&ch=link_tool&ch_id=link" class="genre-item" target="_blank" rel="noopener noreferrer">写真集</a>
+        <!-- 無料作品 -->
+        <div style="background: linear-gradient(135deg, #1a1a1a 0%, #0f2027 100%); border-radius: 8px; padding: 24px; margin-bottom: 20px; border: 2px solid #00ffff;">
+            <div style="font-size: 16px; font-weight: 600; margin-bottom: 16px; color: #00ffff;">
+                無料で読める
+                <span style="display: inline-block; background: #00ffff; color: #000000; padding: 2px 8px; border-radius: 4px; font-size: 12px; font-weight: 700; margin-left: 8px;">FREE</span>
+            </div>
+            <div style="display: grid; grid-template-columns: repeat(auto-fill, minmax(200px, 1fr)); gap: 12px;">
+                <a href="https://al.dmm.com/?lurl=https%3A%2F%2Fbook.dmm.com%2Flist%2Ffree%2F%3Ffloor%3DGcomic&af_id=yoru365-990&ch=link_tool&ch_id=link" target="_blank" rel="noopener noreferrer" style="background: #1a1a1a; color: #ffffff; padding: 10px 20px; border-radius: 6px; text-decoration: none; font-size: 14px; font-weight: 500; border: 1px solid #00ffff; transition: all 0.2s; display: block; text-align: center;">少年・青年マンガ</a>
+                <a href="https://al.dmm.com/?lurl=https%3A%2F%2Fbook.dmm.com%2Flist%2Ffree%2F%3Ffloor%3DGnovel&af_id=yoru365-990&ch=link_tool&ch_id=link" target="_blank" rel="noopener noreferrer" style="background: #1a1a1a; color: #ffffff; padding: 10px 20px; border-radius: 6px; text-decoration: none; font-size: 14px; font-weight: 500; border: 1px solid #00ffff; transition: all 0.2s; display: block; text-align: center;">文芸・ラノベ</a>
+                <a href="https://al.dmm.com/?lurl=https%3A%2F%2Fbook.dmm.com%2Flist%2Ffree%2F%3Ffloor%3DGotherbooks&af_id=yoru365-990&ch=link_tool&ch_id=link" target="_blank" rel="noopener noreferrer" style="background: #1a1a1a; color: #ffffff; padding: 10px 20px; border-radius: 6px; text-decoration: none; font-size: 14px; font-weight: 500; border: 1px solid #00ffff; transition: all 0.2s; display: block; text-align: center;">ビジネス・実用</a>
+                <a href="https://al.dmm.com/?lurl=https%3A%2F%2Fbook.dmm.com%2Flist%2Ffree%2F%3Ffloor%3DGcomicf&af_id=yoru365-990&ch=link_tool&ch_id=link" target="_blank" rel="noopener noreferrer" style="background: #1a1a1a; color: #ffffff; padding: 10px 20px; border-radius: 6px; text-decoration: none; font-size: 14px; font-weight: 500; border: 1px solid #00ffff; transition: all 0.2s; display: block; text-align: center;">少女・女性マンガ</a>
+                <a href="https://al.dmm.com/?lurl=https%3A%2F%2Fbook.dmm.com%2Flist%2Ffree%2F%3Ffloor%3DGbl&af_id=yoru365-990&ch=link_tool&ch_id=link" target="_blank" rel="noopener noreferrer" style="background: #1a1a1a; color: #ffffff; padding: 10px 20px; border-radius: 6px; text-decoration: none; font-size: 14px; font-weight: 500; border: 1px solid #00ffff; transition: all 0.2s; display: block; text-align: center;">BL</a>
+                <a href="https://al.dmm.com/?lurl=https%3A%2F%2Fbook.dmm.com%2Flist%2Ffree%2F%3Ffloor%3DGtl&af_id=yoru365-990&ch=link_tool&ch_id=link" target="_blank" rel="noopener noreferrer" style="background: #1a1a1a; color: #ffffff; padding: 10px 20px; border-radius: 6px; text-decoration: none; font-size: 14px; font-weight: 500; border: 1px solid #00ffff; transition: all 0.2s; display: block; text-align: center;">TL</a>
+                <a href="https://al.dmm.com/?lurl=https%3A%2F%2Fbook.dmm.com%2Flist%2Ffree%2F%3Ffloor%3DGphoto&af_id=yoru365-990&ch=link_tool&ch_id=link" target="_blank" rel="noopener noreferrer" style="background: #1a1a1a; color: #ffffff; padding: 10px 20px; border-radius: 6px; text-decoration: none; font-size: 14px; font-weight: 500; border: 1px solid #00ffff; transition: all 0.2s; display: block; text-align: center;">写真集</a>
+            </div>
+        </div>
+
+        <!-- 人気作品一覧（FANZAスタイルの全ジャンル一覧） -->
+        <div style="background: #111111; border-radius: 8px; margin: 40px 0; border: 1px solid #333333;">
+            <div style="display: flex; justify-content: space-between; align-items: center; padding: 20px 24px; cursor: pointer; transition: all 0.3s; user-select: none;" onclick="togglePopularWorks()">
+                <div style="font-size: 16px; font-weight: 600; color: #ffffff;">📚 ジャンル一覧</div>
+                <div id="popular-works-icon" style="font-size: 20px; transition: transform 0.3s; color: #666666;">▲</div>
+            </div>
+            <div id="popular-works-content" style="max-height: 5000px; overflow: hidden; transition: max-height 0.3s ease-out;">
+                <div style="padding: 0 24px 24px 24px;">
+                    <div style="display: grid; grid-template-columns: repeat(auto-fill, minmax(140px, 1fr)); gap: 8px; font-size: 13px;">
+                        <a href="https://al.dmm.com/?lurl=https%3A%2F%2Fbook.dmm.com%2Fgenre%2F66033%2F&af_id=yoru365-990&ch=link_tool&ch_id=link" target="_blank" rel="noopener noreferrer" style="padding: 8px 12px; background: #1a1a1a; border-radius: 4px; color: #cccccc; transition: all 0.2s; text-decoration: none; display: block; text-align: center;">少女マンガ</a>
+                        <a href="https://al.dmm.com/?lurl=https%3A%2F%2Fbook.dmm.com%2Fgenre%2F66032%2F&af_id=yoru365-990&ch=link_tool&ch_id=link" target="_blank" rel="noopener noreferrer" style="padding: 8px 12px; background: #1a1a1a; border-radius: 4px; color: #cccccc; transition: all 0.2s; text-decoration: none; display: block; text-align: center;">青年マンガ</a>
+                        <a href="https://al.dmm.com/?lurl=https%3A%2F%2Fbook.dmm.com%2Fgenre%2F66031%2F&af_id=yoru365-990&ch=link_tool&ch_id=link" target="_blank" rel="noopener noreferrer" style="padding: 8px 12px; background: #1a1a1a; border-radius: 4px; color: #cccccc; transition: all 0.2s; text-decoration: none; display: block; text-align: center;">少年マンガ</a>
+                        <a href="https://al.dmm.com/?lurl=https%3A%2F%2Fbook.dmm.com%2Fgenre%2F66035%2F&af_id=yoru365-990&ch=link_tool&ch_id=link" target="_blank" rel="noopener noreferrer" style="padding: 8px 12px; background: #1a1a1a; border-radius: 4px; color: #cccccc; transition: all 0.2s; text-decoration: none; display: block; text-align: center;">大人向けマンガ</a>
+                        <a href="https://al.dmm.com/?lurl=https%3A%2F%2Fbook.dmm.com%2Fgenre%2F66034%2F&af_id=yoru365-990&ch=link_tool&ch_id=link" target="_blank" rel="noopener noreferrer" style="padding: 8px 12px; background: #1a1a1a; border-radius: 4px; color: #cccccc; transition: all 0.2s; text-decoration: none; display: block; text-align: center;">女性マンガ</a>
+                        <a href="https://al.dmm.com/?lurl=https%3A%2F%2Fbook.dmm.com%2Fgenre%2F66066%2F&af_id=yoru365-990&ch=link_tool&ch_id=link" target="_blank" rel="noopener noreferrer" style="padding: 8px 12px; background: #1a1a1a; border-radius: 4px; color: #cccccc; transition: all 0.2s; text-decoration: none; display: block; text-align: center;">ロマンスコミック</a>
+                        <a href="https://al.dmm.com/?lurl=https%3A%2F%2Fbook.dmm.com%2Fgenre%2F66036%2F&af_id=yoru365-990&ch=link_tool&ch_id=link" target="_blank" rel="noopener noreferrer" style="padding: 8px 12px; background: #1a1a1a; border-radius: 4px; color: #cccccc; transition: all 0.2s; text-decoration: none; display: block; text-align: center;">BLマンガ</a>
+                        <a href="https://al.dmm.com/?lurl=https%3A%2F%2Fbook.dmm.com%2Fgenre%2F66042%2F&af_id=yoru365-990&ch=link_tool&ch_id=link" target="_blank" rel="noopener noreferrer" style="padding: 8px 12px; background: #1a1a1a; border-radius: 4px; color: #cccccc; transition: all 0.2s; text-decoration: none; display: block; text-align: center;">BL小説</a>
+                        <a href="https://al.dmm.com/?lurl=https%3A%2F%2Fbook.dmm.com%2Fgenre%2F66060%2F&af_id=yoru365-990&ch=link_tool&ch_id=link" target="_blank" rel="noopener noreferrer" style="padding: 8px 12px; background: #1a1a1a; border-radius: 4px; color: #cccccc; transition: all 0.2s; text-decoration: none; display: block; text-align: center;">TLマンガ</a>
+                        <a href="https://al.dmm.com/?lurl=https%3A%2F%2Fbook.dmm.com%2Fgenre%2F66064%2F&af_id=yoru365-990&ch=link_tool&ch_id=link" target="_blank" rel="noopener noreferrer" style="padding: 8px 12px; background: #1a1a1a; border-radius: 4px; color: #cccccc; transition: all 0.2s; text-decoration: none; display: block; text-align: center;">TL小説</a>
+                        <a href="https://al.dmm.com/?lurl=https%3A%2F%2Fbook.dmm.com%2Fgenre%2F66041%2F&af_id=yoru365-990&ch=link_tool&ch_id=link" target="_blank" rel="noopener noreferrer" style="padding: 8px 12px; background: #1a1a1a; border-radius: 4px; color: #cccccc; transition: all 0.2s; text-decoration: none; display: block; text-align: center;">ライトノベル</a>
+                        <a href="https://al.dmm.com/?lurl=https%3A%2F%2Fbook.dmm.com%2Fgenre%2F66039%2F&af_id=yoru365-990&ch=link_tool&ch_id=link" target="_blank" rel="noopener noreferrer" style="padding: 8px 12px; background: #1a1a1a; border-radius: 4px; color: #cccccc; transition: all 0.2s; text-decoration: none; display: block; text-align: center;">小説・文芸</a>
+                        <a href="https://al.dmm.com/?lurl=https%3A%2F%2Fbook.dmm.com%2Fgenre%2F66062%2F&af_id=yoru365-990&ch=link_tool&ch_id=link" target="_blank" rel="noopener noreferrer" style="padding: 8px 12px; background: #1a1a1a; border-radius: 4px; color: #cccccc; transition: all 0.2s; text-decoration: none; display: block; text-align: center;">雑誌</a>
+                        <a href="https://al.dmm.com/?lurl=https%3A%2F%2Fbook.dmm.com%2Fgenre%2F66065%2F&af_id=yoru365-990&ch=link_tool&ch_id=link" target="_blank" rel="noopener noreferrer" style="padding: 8px 12px; background: #1a1a1a; border-radius: 4px; color: #cccccc; transition: all 0.2s; text-decoration: none; display: block; text-align: center;">ロマンス小説</a>
+                        <a href="https://al.dmm.com/?lurl=https%3A%2F%2Fbook.dmm.com%2Fgenre%2F66044%2F&af_id=yoru365-990&ch=link_tool&ch_id=link" target="_blank" rel="noopener noreferrer" style="padding: 8px 12px; background: #1a1a1a; border-radius: 4px; color: #cccccc; transition: all 0.2s; text-decoration: none; display: block; text-align: center;">官能小説</a>
+                        <a href="https://al.dmm.com/?lurl=https%3A%2F%2Fbook.dmm.com%2Fgenre%2F66002%2F&af_id=yoru365-990&ch=link_tool&ch_id=link" target="_blank" rel="noopener noreferrer" style="padding: 8px 12px; background: #1a1a1a; border-radius: 4px; color: #cccccc; transition: all 0.2s; text-decoration: none; display: block; text-align: center;">ビジネス</a>
+                        <a href="https://al.dmm.com/?lurl=https%3A%2F%2Fbook.dmm.com%2Fgenre%2F66006%2F&af_id=yoru365-990&ch=link_tool&ch_id=link" target="_blank" rel="noopener noreferrer" style="padding: 8px 12px; background: #1a1a1a; border-radius: 4px; color: #cccccc; transition: all 0.2s; text-decoration: none; display: block; text-align: center;">学術・語学</a>
+                        <a href="https://al.dmm.com/?lurl=https%3A%2F%2Fbook.dmm.com%2Fgenre%2F66055%2F&af_id=yoru365-990&ch=link_tool&ch_id=link" target="_blank" rel="noopener noreferrer" style="padding: 8px 12px; background: #1a1a1a; border-radius: 4px; color: #cccccc; transition: all 0.2s; text-decoration: none; display: block; text-align: center;">雑学・エンタメ</a>
+                        <a href="https://al.dmm.com/?lurl=https%3A%2F%2Fbook.dmm.com%2Fgenre%2F66056%2F&af_id=yoru365-990&ch=link_tool&ch_id=link" target="_blank" rel="noopener noreferrer" style="padding: 8px 12px; background: #1a1a1a; border-radius: 4px; color: #cccccc; transition: all 0.2s; text-decoration: none; display: block; text-align: center;">趣味</a>
+                        <a href="https://al.dmm.com/?lurl=https%3A%2F%2Fbook.dmm.com%2Fgenre%2F66058%2F&af_id=yoru365-990&ch=link_tool&ch_id=link" target="_blank" rel="noopener noreferrer" style="padding: 8px 12px; background: #1a1a1a; border-radius: 4px; color: #cccccc; transition: all 0.2s; text-decoration: none; display: block; text-align: center;">暮らし・健康・美容</a>
+                        <a href="https://al.dmm.com/?lurl=https%3A%2F%2Fbook.dmm.com%2Fgenre%2F66059%2F&af_id=yoru365-990&ch=link_tool&ch_id=link" target="_blank" rel="noopener noreferrer" style="padding: 8px 12px; background: #1a1a1a; border-radius: 4px; color: #cccccc; transition: all 0.2s; text-decoration: none; display: block; text-align: center;">旅行</a>
+                        <a href="https://al.dmm.com/?lurl=https%3A%2F%2Fbook.dmm.com%2Fgenre%2F66046%2F&af_id=yoru365-990&ch=link_tool&ch_id=link" target="_blank" rel="noopener noreferrer" style="padding: 8px 12px; background: #1a1a1a; border-radius: 4px; color: #cccccc; transition: all 0.2s; text-decoration: none; display: block; text-align: center;">写真集女性</a>
+                        <a href="https://al.dmm.com/?lurl=https%3A%2F%2Fbook.dmm.com%2Fgenre%2F66047%2F&af_id=yoru365-990&ch=link_tool&ch_id=link" target="_blank" rel="noopener noreferrer" style="padding: 8px 12px; background: #1a1a1a; border-radius: 4px; color: #cccccc; transition: all 0.2s; text-decoration: none; display: block; text-align: center;">写真集男性</a>
+                        <a href="https://al.dmm.com/?lurl=https%3A%2F%2Fbook.dmm.com%2Fgenre%2F66048%2F&af_id=yoru365-990&ch=link_tool&ch_id=link" target="_blank" rel="noopener noreferrer" style="padding: 8px 12px; background: #1a1a1a; border-radius: 4px; color: #cccccc; transition: all 0.2s; text-decoration: none; display: block; text-align: center;">風景・その他</a>
+                    </div>
+                </div>
             </div>
         </div>
 
@@ -400,6 +439,22 @@
 
         // ページ読み込み時に実行
         window.addEventListener('DOMContentLoaded', loadData);
+
+        // アコーディオン機能
+        function togglePopularWorks() {
+            const content = document.getElementById('popular-works-content');
+            const icon = document.getElementById('popular-works-icon');
+            
+            if (content.style.maxHeight === '0px' || content.style.maxHeight === '') {
+                content.style.maxHeight = '5000px';
+                icon.style.transform = 'rotate(180deg)';
+                icon.textContent = '▲';
+            } else {
+                content.style.maxHeight = '0px';
+                icon.style.transform = 'rotate(0deg)';
+                icon.textContent = '▼';
+            }
+        }
     </script>
 </body>
 </html>
